student-service - spring boot 3, java 21 and swagger upgrade